--- a/app/src/main/res/layout/activity_game_avtivity.xml
+++ b/app/src/main/res/layout/activity_game_avtivity.xml
@@ -16,13 +16,12 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/player_card_in_hand_0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:clickable="true"
-        android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +50,7 @@
         android:layout_marginTop="260dp"
         android:layout_marginBottom="361dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/player_card_in_hand_0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,105 +68,95 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/player_card_in_hand_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/textView2" />
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_0"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_0" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/player_card_in_hand_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/textView3" />
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_1"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_1" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/player_card_in_hand_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_2"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_2" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/player_card_in_hand_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toTopOf="@+id/textView7" />
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_4"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_4" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/player_card_in_hand_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:clickable="true"
-        android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintStart_toStartOf="@+id/player_card_in_hand_0"
+        app:layout_constraintTop_toBottomOf="@+id/player_card_in_hand_0" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/player_card_in_hand_6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toTopOf="@+id/textView6" />
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_5"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_5" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/player_card_in_hand_7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toTopOf="@+id/textView8" />
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_6"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_6" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/player_card_in_hand_8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:clickable="true"
-        android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintStart_toStartOf="@+id/player_card_in_hand_4"
+        app:layout_constraintTop_toBottomOf="@+id/player_card_in_hand_4" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/player_card_in_hand_9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toTopOf="@+id/textView10" />
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_8"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_8" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/player_card_in_hand_10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toEndOf="@+id/textView11"
-        app:layout_constraintTop_toTopOf="@+id/textView11" />
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_9"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
