キャラ画像追加＿clickable

--- a/app/src/main/res/layout/activity_select_activity.xml
+++ b/app/src/main/res/layout/activity_select_activity.xml
@@ -39,6 +39,7 @@
         android:layout_marginEnd="38dp"
         android:layout_marginRight="38dp"
         android:layout_marginBottom="12dp"
+        android:clickable="true"
         app:layout_constraintBottom_toTopOf="@+id/robot_full_sigmoid_img"
         app:layout_constraintEnd_toStartOf="@+id/strong_img"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,6 +52,7 @@
         android:layout_height="0dp"
         android:layout_marginEnd="94dp"
         android:layout_marginRight="94dp"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="@+id/zako_img"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/zako_img"
@@ -64,6 +66,7 @@
         android:layout_marginEnd="49dp"
         android:layout_marginRight="49dp"
         android:layout_marginBottom="12dp"
+        android:clickable="true"
         app:layout_constraintBottom_toTopOf="@+id/robot_genetic_img"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/robot_full_relu_img"
@@ -79,6 +82,7 @@
         android:layout_marginEnd="38dp"
         android:layout_marginRight="38dp"
         android:layout_marginBottom="269dp"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/robot_select_img"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,6 +95,7 @@
         android:layout_height="0dp"
         android:layout_marginEnd="94dp"
         android:layout_marginRight="94dp"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="@+id/robot_genetic_img"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/robot_genetic_img"
@@ -107,6 +112,7 @@
         android:layout_marginEnd="124dp"
         android:layout_marginRight="124dp"
         android:layout_marginBottom="112dp"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="@+id/robot_genetic_img"
         app:layout_constraintEnd_toStartOf="@+id/robot_full_sigmoid_img"
         app:layout_constraintStart_toStartOf="parent"
