--- a/app/src/main/res/layout/activity_game_avtivity.xml
+++ b/app/src/main/res/layout/activity_game_avtivity.xml
@@ -301,20 +301,22 @@
 
     <ImageView
         android:id="@+id/COM1_turn"
-        android:layout_width="205dp"
-        android:layout_height="130dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/divider4"
+        app:layout_constraintEnd_toStartOf="@+id/COM2_turn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/frame_style" />
 
     <ImageView
         android:id="@+id/COM3_turn"
-        android:layout_width="205dp"
-        android:layout_height="130dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/divider2"
+        app:layout_constraintEnd_toStartOf="@+id/COM4_turn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/COM1_turn"
         app:srcCompat="@drawable/frame_style" />
